Refactor track images and update model training code
- Changed TRACK_SAVE_PATH to "monza_draw.png" and updated TRACK_IMAGE_PATH to point to the new track image location.
- Added a new code cell to define a simple feedforward neural network model using Keras.
- Implemented a DQNAgent class for reinforcement learning with methods for experience replay and action selection.
- Updated the model_game_step function to simulate game steps for the car in the racing environment.
- Removed unused track images and added a new track image "track1.png".
- Updated the main execution block to run the simulation.

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -63,9 +63,9 @@
     "MIN_TURN_ANGLE = 1.5\n",
     "MAX_TURN_ANGLE = 2\n",
     "\n",
-    "TRACK_SAVE_PATH = \"track1.png\"\n",
+    "TRACK_SAVE_PATH = \"monza_draw.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
-    "TRACK_IMAGE_PATH = r\"track1.png\"\n",
+    "TRACK_IMAGE_PATH = r\"Track_images\\track1.png\"\n",
     "\n",
     "finish_line_rect=pygame.Rect(DEFAULT_START_X+30,DEFAULT_START_Y-20,10,100)\n",
     "checkpoint_data=[\n",
@@ -227,7 +227,378 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "35516690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">68</span> │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m128\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │            \u001b[38;5;34m68\u001b[0m │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def model():\n",
+    "    \"\"\"Builds a simple feedforward neural network model.\n",
+    "\n",
+    "    Returns:\n",
+    "        model: A Keras Sequential model instance.\n",
+    "    \"\"\"\n",
+    "    model=Sequential(\n",
+    "        [Dense(32,activation='relu',input_shape=(3,)),\n",
+    "         Dense(16,activation='relu'),\n",
+    "         Dense(4,activation='linear')]\n",
+    "    )\n",
+    "    model.compile(optimizer='adam',loss='mse')\n",
+    "    return model\n",
+    "ai_model=model()\n",
+    "ai_model.summary()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7f902bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DQNAgent:\n",
+    "    \"\"\"\n",
+    "    A Deep Q-Network (DQN) agent for reinforcement learning.\n",
+    "    Attributes:\n",
+    "        model: The neural network model used for approximating Q-values.\n",
+    "        memory: A deque to store past experiences for experience replay.\n",
+    "        gamma: Discount factor for future rewards.\n",
+    "        epsilon: Exploration rate for the epsilon-greedy policy.\n",
+    "        epsilon_min: Minimum exploration rate.\n",
+    "        epsilon_decay: Decay rate for exploration after each training episode.\n",
+    "        batch_size: Size of the minibatch for training.\n",
+    "    Methods:\n",
+    "        remember: Store an experience in memory.\n",
+    "        choose_action: Select an action based on the current state using an epsilon-greedy policy.\n",
+    "        train_from_memory: Train the model using a minibatch of experiences from memory.\n",
+    "    \"\"\"\n",
+    "    def DQNAgent(self,model):\n",
+    "        self.model=model\n",
+    "        self.memory=deque(maxlen=2000)\n",
+    "        self.gamma=0.95  #discount factor rewards for longterm(closer to 1) or shortterm(closer to 0)\n",
+    "        self.epsilon=1.0  #exploration rate (initially high to explore)\n",
+    "        self.epsilon_min=0.01  #minimum exploration rate\n",
+    "        self.epsilon_decay=0.995  #decay rate for exploration(after each trainging episode the epsilon decreases rate)\n",
+    "        self.batch_size=32  #size of the minibatch for training(no of agents can be trained at once)\n",
+    "\n",
+    "    #remember the experience\n",
+    "    def remember(self,state,action,reward,next_state,done):\n",
+    "        self.memory.append((state,action,reward,next_state,done))\n",
+    "    \n",
+    "    #choose action based on epsilon-greedy policy\n",
+    "    def choose_action(self,state):\n",
+    "        if np.random.rand()<=self.epsilon:\n",
+    "            return random.randrange(4)\n",
+    "        q_values=self.model.predict(state,verbose=0)\n",
+    "        return np.argmax(q_values[0])\n",
+    "    \n",
+    "    #train the model from memory\n",
+    "    def train_from_memory(self):\n",
+    "        if len(self.memory) < self.batch_size:\n",
+    "            return # Don't train if memory is too small to form a minibatch\n",
+    "\n",
+    "        minibatch = random.sample(self.memory, self.batch_size) # Randomly sample a minibatch from memory\n",
+    "        for state, action, reward, next_state, done in minibatch:\n",
+    "            target = reward\n",
+    "            if not done:\n",
+    "                # The core of Q-Learning: New Q = Current Reward + Discounted Future Reward\n",
+    "                q_values_next = self.model.predict(next_state, verbose=0)[0]\n",
+    "                target = reward + self.gamma * np.amax(q_values_next) # Update target only if not done\n",
+    "\n",
+    "            target_f = self.model.predict(state, verbose=0) # Current Q-values\n",
+    "            target_f[0][action] = target # Update the Q-value for the action taken \n",
+    "            self.model.fit(state, target_f, epochs=1, verbose=0) # Train the model on the updated Q-values\n",
+    "        \n",
+    "        if self.epsilon > self.epsilon_min: \n",
+    "            self.epsilon *= self.epsilon_decay # Decay epsilon to reduce exploration over time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d40d9c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_game_step(action,car,track_image,current_checkpoint):\n",
+    "    \"\"\"Simulates a game step for the car in the racing environment.\n",
+    "\n",
+    "    Args:\n",
+    "        action (int): Action to be taken by the car (0: left, 1: straight, 2: right, 3: brake).\n",
+    "        car (Car): The car object representing the player's car.\n",
+    "        track_image (Surface): The image of the track.\n",
+    "        current_checkpoint (int): The index of the current checkpoint.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the new state, done flag, reward, and current checkpoint.\n",
+    "    \"\"\"\n",
+    "    CHECKPOINTS = [pygame.Rect(x, y, w, h) for x, y, w, h in checkpoint_data]\n",
+    "    done=False\n",
+    "    reward=car.speed*0.1  #reward for moving fast\n",
+    "    car.speed+=ACCELERATION\n",
+    "    speed_factor=car.speed/MAX_SPEED\n",
+    "    dynamic_turn_angle=MAX_TURN_ANGLE-(speed_factor)*(MAX_TURN_ANGLE-MIN_TURN_ANGLE)\n",
+    "    if action==0:  #left\n",
+    "        car.angle+=dynamic_turn_angle\n",
+    "    elif action==2:  #right\n",
+    "        car.angle-=dynamic_turn_angle\n",
+    "    elif action==3:  #brake\n",
+    "        car.speed-=BRAKE_FORCE\n",
+    "\n",
+    "    car.speed=max(0,car.speed-FRICTION)\n",
+    "    car.speed=min(car.speed,MAX_SPEED)\n",
+    "    car.move()\n",
+    "    \n",
+    "    if current_checkpoint<len(CHECKPOINTS):\n",
+    "        if car.rect.colliderect(CHECKPOINTS[current_checkpoint]):\n",
+    "            current_checkpoint+=1\n",
+    "            reward+=20\n",
+    "    if current_checkpoint==len(CHECKPOINTS) and car.rect.colliderect9(finish_line_rect):\n",
+    "        reward+=200\n",
+    "        current_checkpoint=0\n",
+    "    \n",
+    "    try:\n",
+    "        pixel_color=track_image.get_at((int(car.x),int(car.y)))[:3]\n",
+    "        if pixel_color==BG_COLOR:\n",
+    "            done=True\n",
+    "    except IndexError:\n",
+    "        done=True\n",
+    "        \n",
+    "    if done:\n",
+    "        reward= -100\n",
+    "        return [],done,reward,current_checkpoint\n",
+    "    new_state,_=ray_casting(car,track_image)\n",
+    "    return new_state,done,reward,current_checkpoint\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5641eac",
+   "metadata": {},
+   "source": [
+    "def model_game_step(action,car,track_image):\n",
+    "    \"\"\"Simulates a single step in the game using the provided action.\n",
+    "\n",
+    "    Args:\n",
+    "        action (int): The action to be taken (0: left, 1: accelerate, 2: right, 3: brake).\n",
+    "        car (Car): The car object.\n",
+    "        track_image (Surface): The surface of the track.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the new state, reward, and done flag.\n",
+    "    \"\"\"\n",
+    "    reward=0.1\n",
+    "    done=False\n",
+    "    \n",
+    "    speed_factor = car.speed / MAX_SPEED\n",
+    "    turn_range = MAX_TURN_ANGLE - MIN_TURN_ANGLE\n",
+    "    dynamic_turn_angle = MAX_TURN_ANGLE - (speed_factor * turn_range)\n",
+    "    if action==0:\n",
+    "        car.angle += dynamic_turn_angle\n",
+    "    elif action==2:\n",
+    "        car.angle -= dynamic_turn_angle\n",
+    "    elif action==1:\n",
+    "        if car.speed < MAX_SPEED:\n",
+    "                car.speed += ACCELERATION\n",
+    "    elif action==3:\n",
+    "        if car.speed > 0:\n",
+    "            car.speed -= BRAKE_FORCE\n",
+    "    if car.speed > 0:\n",
+    "        car.speed -= FRICTION\n",
+    "    if car.speed < 0:\n",
+    "        car.speed += FRICTION\n",
+    "    if abs(car.speed) < FRICTION:\n",
+    "        car.speed = 0\n",
+    "        \n",
+    "    car.move()\n",
+    "    car.draw(track_image)\n",
+    "    \n",
+    "    try:\n",
+    "        CAR_ROAD_COLOR = track_image.get_at((DEFAULT_START_X, DEFAULT_START_Y))[:3]\n",
+    "        pixel_color = track_image.get_at((int(car.x), int(car.y)))[0:3]\n",
+    "        if pixel_color == CAR_ROAD_COLOR:\n",
+    "            done = True\n",
+    "    except IndexError:\n",
+    "        done = True\n",
+    "    if done:\n",
+    "        reward= -100\n",
+    "        return [], reward, done\n",
+    "\n",
+    "    new_state,_=ray_casting(car,track_image)\n",
+    "    return new_state,reward,done\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "id": "fbe761f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def train_networks():\n",
+    "#     pygame.init()\n",
+    "#     track_image=pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "#     screen=pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "#     clock=pygame.time.Clock()\n",
+    "#     pygame.display.set_caption(\"AI Training in progress...\")\n",
+    "    \n",
+    "#     ai_model=model()\n",
+    "#     agent=DQNAgent(ai_model)\n",
+    "#     episodes=500\n",
+    "#     for e in episodes:\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "af0f3dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_ai_simulation():\n",
+    "    \"\"\"Runs the car simulation controlled by an AI model.\n",
+    "        The AI model predicts actions based on the car's sensor data.\n",
+    "        0: turn left\n",
+    "        1: accelerate\n",
+    "        2: turn right\n",
+    "        3: brake\n",
+    "    \"\"\"\n",
+    "    pygame.init()\n",
+    "    screen=pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    clock=pygame.time.Clock()\n",
+    "    pygame.display.set_caption(\"AI Car Simulation\")\n",
+    "    track_surface=pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "    car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
+    "    font=pygame.font.SysFont(None,22)\n",
+    "    \n",
+    "    running=True\n",
+    "    while running:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type==pygame.QUIT:\n",
+    "                running=False\n",
+    "        current_state,ray_endpoints=ray_casting(car,track_surface)\n",
+    "        reshaped_state = np.reshape(current_state, [1, 3])\n",
+    "        q_values = ai_model.predict(reshaped_state, verbose=0)\n",
+    "        action = np.argmax(q_values[0])\n",
+    "        _ ,_ ,done=model_game_step(action,car,track_surface)\n",
+    "        if done:\n",
+    "            text_surface = font.render(\"Car Crashed! Resetting...\", True, (255, 255, 255))\n",
+    "            screen.blit(text_surface, (50, 50))\n",
+    "            pygame.display.update()\n",
+    "            pygame.time.wait(1000)\n",
+    "            car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
+    "        \n",
+    "        screen.blit(track_surface,(0,0))\n",
+    "        car.draw(screen)\n",
+    "        \n",
+    "        text_surface = font.render(f\"Distances: {current_state}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 80))\n",
+    "        for points in ray_endpoints:\n",
+    "            pygame.draw.line(screen,(0,255,0),(car.x,car.y),points,1)\n",
+    "            \n",
+    "        pygame.display.update()\n",
+    "        clock.tick(60)\n",
+    "    pygame.quit()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
@@ -428,14 +799,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "823c5ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkpoint reached! 1\n",
+      "Checkpoint reached! 1\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #draw_track()\n",
-    "    run_simulation()\n"
+    "    run_simulation()\n",
+    "    #run_ai_simulation()\n"
    ]
   },
   {
