Refactor DQNAgent class and improve training logic

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7f902bb0",
    "metadata": {},
    "outputs": [],
@@ -363,50 +363,74 @@
     "        choose_action: Select an action based on the current state using an epsilon-greedy policy.\n",
     "        train_from_memory: Train the model using a minibatch of experiences from memory.\n",
     "    \"\"\"\n",
-    "    def DQNAgent(self,model):\n",
-    "        self.model=model\n",
-    "        self.memory=deque(maxlen=2000)\n",
-    "        self.gamma=0.95  #discount factor rewards for longterm(closer to 1) or shortterm(closer to 0)\n",
-    "        self.epsilon=1.0  #exploration rate (initially high to explore)\n",
-    "        self.epsilon_min=0.01  #minimum exploration rate\n",
-    "        self.epsilon_decay=0.995  #decay rate for exploration(after each trainging episode the epsilon decreases rate)\n",
-    "        self.batch_size=32  #size of the minibatch for training(no of agents can be trained at once)\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "        self.memory = deque(maxlen=20000) # Increased memory size for better learning\n",
+    "        self.gamma = 0.95  # Discount factor: how much to value future rewards\n",
+    "        self.epsilon = 1.0  # Exploration rate: initial probability of taking a random action\n",
+    "        self.epsilon_min = 0.01 # Minimum exploration rate\n",
+    "        self.epsilon_decay = 0.995 # Decay rate for exploration\n",
+    "        self.batch_size = 64 # Increased batch size for more stable training\n",
     "\n",
-    "    #remember the experience\n",
-    "    def remember(self,state,action,reward,next_state,done):\n",
-    "        self.memory.append((state,action,reward,next_state,done))\n",
-    "    \n",
-    "    #choose action based on epsilon-greedy policy\n",
-    "    def choose_action(self,state):\n",
-    "        if np.random.rand()<=self.epsilon:\n",
-    "            return random.randrange(4)\n",
-    "        q_values=self.model.predict(state,verbose=0)\n",
-    "        return np.argmax(q_values[0])\n",
-    "    \n",
-    "    #train the model from memory\n",
-    "    def train_from_memory(self):\n",
-    "        if len(self.memory) < self.batch_size:\n",
-    "            return # Don't train if memory is too small to form a minibatch\n",
+    "    def remember(self, state, action, reward, next_state, done):\n",
+    "        \"\"\"Stores an experience tuple in the agent's memory.\"\"\"\n",
+    "        self.memory.append((state, action, reward, next_state, done))\n",
     "\n",
-    "        minibatch = random.sample(self.memory, self.batch_size) # Randomly sample a minibatch from memory\n",
-    "        for state, action, reward, next_state, done in minibatch:\n",
-    "            target = reward\n",
-    "            if not done:\n",
-    "                # The core of Q-Learning: New Q = Current Reward + Discounted Future Reward\n",
-    "                q_values_next = self.model.predict(next_state, verbose=0)[0]\n",
-    "                target = reward + self.gamma * np.amax(q_values_next) # Update target only if not done\n",
-    "\n",
-    "            target_f = self.model.predict(state, verbose=0) # Current Q-values\n",
-    "            target_f[0][action] = target # Update the Q-value for the action taken \n",
-    "            self.model.fit(state, target_f, epochs=1, verbose=0) # Train the model on the updated Q-values\n",
+    "    def choose_action(self, state):\n",
+    "        \"\"\"\n",
+    "        Selects an action based on the current state using an epsilon-greedy policy.\n",
+    "        With probability epsilon, it takes a random action (exploration).\n",
+    "        Otherwise, it takes the best known action (exploitation).\n",
+    "        \"\"\"\n",
+    "        if np.random.rand() <= self.epsilon:\n",
+    "            return random.randrange(4)  # Return a random action (0, 1, 2, or 3)\n",
     "        \n",
-    "        if self.epsilon > self.epsilon_min: \n",
-    "            self.epsilon *= self.epsilon_decay # Decay epsilon to reduce exploration over time\n"
+    "        # Predict Q-values for the given state and choose the action with the highest Q-value\n",
+    "        q_values = self.model.predict(np.reshape(state, [1, 3]), verbose=0)\n",
+    "        return np.argmax(q_values[0])\n",
+    "\n",
+    "    def train_from_memory(self):\n",
+    "        \"\"\"\n",
+    "        Trains the neural network using a randomly sampled batch of experiences from memory.\n",
+    "        This is much more efficient than training on single experiences.\n",
+    "        \"\"\"\n",
+    "        if len(self.memory) < self.batch_size:\n",
+    "            return # Don't train if memory is too small\n",
+    "\n",
+    "        # Randomly sample a minibatch from memory\n",
+    "        minibatch = random.sample(self.memory, self.batch_size)\n",
+    "\n",
+    "        # Separate the components of the experiences into NumPy arrays for batch processing\n",
+    "        states = np.array([experience[0] for experience in minibatch])\n",
+    "        actions = np.array([experience[1] for experience in minibatch])\n",
+    "        rewards = np.array([experience[2] for experience in minibatch])\n",
+    "        next_states = np.array([experience[3] for experience in minibatch])\n",
+    "        dones = np.array([experience[4] for experience in minibatch])\n",
+    "\n",
+    "        # Predict the Q-values for the current states and next states in a single batch\n",
+    "        current_q_values = self.model.predict(states, verbose=0)\n",
+    "        next_q_values = self.model.predict(next_states, verbose=0)\n",
+    "\n",
+    "        # The core of the Q-Learning update rule\n",
+    "        # Q(s, a) = r + γ * max_a' Q(s', a')\n",
+    "        # We calculate the target Q-value for each experience in the batch\n",
+    "        targets = rewards + self.gamma * np.amax(next_q_values, axis=1) * (1 - dones)\n",
+    "        \n",
+    "        # Update the Q-values for the actions that were actually taken\n",
+    "        for i, action in enumerate(actions):\n",
+    "            current_q_values[i][action] = targets[i]\n",
+    "\n",
+    "        # Train the model on the updated Q-values\n",
+    "        self.model.fit(states, current_q_values, epochs=1, verbose=0)\n",
+    "\n",
+    "        # Decay epsilon to reduce exploration over time\n",
+    "        if self.epsilon > self.epsilon_min:\n",
+    "            self.epsilon *= self.epsilon_decay\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0d40d9c5",
    "metadata": {},
    "outputs": [],
@@ -433,8 +457,15 @@
     "        car.angle+=dynamic_turn_angle\n",
     "    elif action==2:  #right\n",
     "        car.angle-=dynamic_turn_angle\n",
-    "    elif action==3:  #brake\n",
-    "        car.speed-=BRAKE_FORCE\n",
+    "    elif action==3:\n",
+    "        if car.speed > 0:\n",
+    "            car.speed -= BRAKE_FORCE\n",
+    "    if car.speed > 0:\n",
+    "        car.speed -= FRICTION\n",
+    "    if car.speed < 0:\n",
+    "        car.speed += FRICTION\n",
+    "    if abs(car.speed) < FRICTION:\n",
+    "        car.speed = 0\n",
     "\n",
     "    car.speed=max(0,car.speed-FRICTION)\n",
     "    car.speed=min(car.speed,MAX_SPEED)\n",
@@ -444,7 +475,7 @@
     "        if car.rect.colliderect(CHECKPOINTS[current_checkpoint]):\n",
     "            current_checkpoint+=1\n",
     "            reward+=20\n",
-    "    if current_checkpoint==len(CHECKPOINTS) and car.rect.colliderect9(finish_line_rect):\n",
+    "    if current_checkpoint==len(CHECKPOINTS) and car.rect.colliderect(finish_line_rect):\n",
     "        reward+=200\n",
     "        current_checkpoint=0\n",
     "    \n",
@@ -522,22 +553,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fbe761f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def train_networks():\n",
-    "#     pygame.init()\n",
-    "#     track_image=pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
-    "#     screen=pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
-    "#     clock=pygame.time.Clock()\n",
-    "#     pygame.display.set_caption(\"AI Training in progress...\")\n",
-    "    \n",
-    "#     ai_model=model()\n",
-    "#     agent=DQNAgent(ai_model)\n",
-    "#     episodes=500\n",
-    "#     for e in episodes:\n",
+    "\n",
     "        \n",
     "    "
    ]
@@ -808,7 +829,18 @@
      "output_type": "stream",
      "text": [
       "Checkpoint reached! 1\n",
-      "Checkpoint reached! 1\n"
+      "Checkpoint reached! 2\n",
+      "Checkpoint reached! 3\n",
+      "Checkpoint reached! 4\n",
+      "Checkpoint reached! 5\n",
+      "Checkpoint reached! 6\n",
+      "Checkpoint reached! 7\n",
+      "Checkpoint reached! 8\n",
+      "Checkpoint reached! 9\n",
+      "Checkpoint reached! 10\n",
+      "Checkpoint reached! 1\n",
+      "Checkpoint reached! 1\n",
+      "Checkpoint reached! 2\n"
      ]
     }
    ],
