adding the pre train and fine tune model to network

--- a/User_Mode.ipynb
+++ b/User_Mode.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b61661ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    }
+   ],
    "source": [
     "#importing necessary libraries and modules\n",
     "from Core_Game_Parts import *\n",
@@ -15,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9aabe4a2",
    "metadata": {},
    "outputs": [],
@@ -203,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1013d01e",
    "metadata": {},
    "outputs": [
@@ -213,14 +230,8 @@
      "text": [
       "Checkpoint reached! 1\n",
       "Checkpoint reached! 2\n",
-      "Checkpoint reached! 3\n",
       "Checkpoint reached! 1\n",
-      "Checkpoint reached! 1\n",
-      "Checkpoint reached! 2\n",
-      "Checkpoint reached! 1\n",
-      "Checkpoint reached! 1\n",
-      "Checkpoint reached! 2\n",
-      "Checkpoint reached! 3\n"
+      "Checkpoint reached! 2\n"
      ]
     }
    ],
