Refactor training functions and update model architecture for imitation learning

--- a/User_Training_Weights.ipynb
+++ b/User_Training_Weights.ipynb
@@ -128,7 +128,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "ad86c3fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_imitation_model(data_path=\"expert_data.npy\", weights_path=\"final_imitation_weights.h5\"):\n",
+    "    print(\"Loading expert data...\")\n",
+    "    expert_data = np.load(data_path, allow_pickle=True)\n",
+    "    \n",
+    "    states = np.array([item[0] for item in expert_data])\n",
+    "    actions = np.array([item[1] for item in expert_data])\n",
+    "    actions_one_hot = to_categorical(actions, num_classes=3)\n",
+    "    \n",
+    "    print(f\"Data loaded. Training on {len(states)} samples...\")\n",
+    "    \n",
+    "    # Define the model for classification\n",
+    "    imitation_model = Sequential([\n",
+    "        Dense(64, activation='relu', input_shape=(4,)),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dense(3, activation='softmax') # Softmax for predicting the probability of each action\n",
+    "    ])\n",
+    "    imitation_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    \n",
+    "    # Train the model to imitate\n",
+    "    imitation_model.fit(states, actions_one_hot, epochs=25, batch_size=64, validation_split=0.1, shuffle=True)\n",
+    "    \n",
+    "    print(f\"Training complete. Saving final weights to {weights_path}...\")\n",
+    "    imitation_model.save_weights(weights_path)\n",
+    "    print(\"Final weights saved!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2790c5c9",
    "metadata": {},
    "outputs": [
@@ -144,8 +177,9 @@
    ],
    "source": [
     "if __name__==\"__main__\":\n",
-    "    collect_expert_data()\n",
-    "    #pretrain_agent()"
+    "    #collect_expert_data()  #for collecting the data\n",
+    "    #pretrain_agent()       #for pre training\n",
+    "    train_imitation_model() #for Behaveral Trainign "
    ]
   }
  ],
