--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "add19033",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Core_Game_Parts import *\n",
     "import pygame\n",
@@ -37,26 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c41a80d7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_2\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_2\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -68,11 +43,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
+       "│ dense_6 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "│ dense_7 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "│ dense_8 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -80,11 +55,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
+       "│ dense_6 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "│ dense_7 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "│ dense_8 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -153,27 +128,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9ad69a8b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 2 variables whereas the saved optimizer has 14 variables. \n",
-      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded weights from: dqn_car_weights_episode_50c.weights.h5\n",
-      "Total actions taken by the agent during the simulation:\n",
-      "Action 0: 38\n",
-      "Action 1: 79\n",
-      "Action 2: 6\n"
+      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_12, built=True>:\n",
+      "\n",
+      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_4/dense_12/kernel, shape=(4, 32), dtype=float32, value=[[ 0.21166939 -0.11433792 -0.25654843  0.023359    0.00448847  0.36197972\n",
+      "  -0.23445888  0.2673146  -0.34634155  0.26935863 -0.01122066  0.21049798\n",
+      "  -0.21454804 -0.16626853 -0.08436832  0.3917129   0.28269446 -0.16253908\n",
+      "   0.08384046 -0.39818183  0.04523635 -0.06162331 -0.35445747 -0.19207966\n",
+      "  -0.3305429  -0.3819696  -0.2500659  -0.33054483  0.28068328  0.21229678\n",
+      "   0.02516785 -0.03443539]\n",
+      " [-0.3438389   0.34252948  0.05711052 -0.19774011  0.00418225 -0.27380458\n",
+      "  -0.04143634 -0.39422628  0.03961298 -0.31048256 -0.3156002  -0.34133196\n",
+      "   0.08890057 -0.39316514  0.40186536 -0.06156811  0.01984912 -0.27278674\n",
+      "   0.34795302 -0.20213708 -0.22794499  0.24273652  0.21654797 -0.25819737\n",
+      "  -0.01364398  0.36293966 -0.07053491  0.02353564  0.03825918 -0.10988218\n",
+      "   0.13310754  0.3060962 ]\n",
+      " [-0.06917137 -0.26546794  0.2161473   0.02948022 -0.13553232  0.12465638\n",
+      "   0.08085942 -0.21062762  0.30531847 -0.34254894 -0.05473936 -0.04164249\n",
+      "  -0.02515832 -0.25078487  0.32911682  0.09819442 -0.25670856 -0.11783165\n",
+      "  -0.02869952  0.07207504  0.19900984 -0.4017576   0.07556289  0.21641916\n",
+      "   0.3603618   0.29784656  0.22480005 -0.09555715  0.16734362  0.13701308\n",
+      "  -0.01288098  0.12244672]\n",
+      " [-0.01107767  0.16478354 -0.27056608 -0.3274646  -0.19025435  0.39412993\n",
+      "   0.35608286  0.3594702   0.02517825 -0.38044262 -0.0622665  -0.38079146\n",
+      "   0.2908998   0.17936158  0.1673094  -0.31720072  0.376163    0.01140374\n",
+      "  -0.05658948 -0.4043047  -0.14134404  0.08212185  0.2789576   0.08492467\n",
+      "  -0.04712746 -0.15562361 -0.12296999  0.3615619   0.01514477 -0.24857727\n",
+      "   0.06553301  0.12651628]]>\n",
+      "\n",
+      "List of objects that could not be loaded:\n",
+      "[<Dense name=dense_12, built=True>, <Dense name=dense_13, built=True>, <Dense name=dense_14, built=True>]\n"
      ]
     }
    ],
@@ -264,10 +255,11 @@
     "        clock.tick(60)\n",
     "\n",
     "    pygame.quit()   \n",
+    "\n",
     "# --- RUN THE SIMULATION WITH YOUR TRAINED WEIGHTS ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of your saved weights file!\n",
-    "WEIGHTS_FILENAME = \"dqn_car_weights_episode_50c.weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"pretrained.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "# This checks if a pygame window is already open to avoid errors\n",
@@ -275,6 +267,114 @@
     "    run_trained_agent(WEIGHTS_FILENAME)\n",
     "else:\n",
     "    # If you get this message, restart the notebook kernel before running this cell again.\n",
+    "    print(\"Pygame window may already be open. Please restart the kernel to run again.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c3e180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_final_agent(weights_path):\n",
+    "    \"\"\"\n",
+    "    Loads the imitation-trained agent and runs the visual simulation correctly.\n",
+    "    \"\"\"\n",
+    "    os.environ[\"SDL_VIDEODRIVER\"] = \"windows\"\n",
+    "    pygame.init()\n",
+    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    clock = pygame.time.Clock()\n",
+    "    pygame.display.set_caption(\"Final Trained Agent\")\n",
+    "    font = pygame.font.SysFont(None, 36)\n",
+    "    track_surface = pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "\n",
+    "    # Define the model architecture EXACTLY as it was for training in Phase 2\n",
+    "    def model_for_testing():\n",
+    "        net = Sequential([\n",
+    "            Dense(64, activation='relu', input_shape=(4,)),\n",
+    "            Dense(64, activation='relu'),\n",
+    "            Dense(3, activation='linear') # Use linear for argmax, it's more stable\n",
+    "        ])\n",
+    "        net.compile() # Compile is not strictly needed for prediction but is good practice\n",
+    "        return net\n",
+    "\n",
+    "    ai_model = model_for_testing()\n",
+    "    try:\n",
+    "        ai_model.load_weights(weights_path)\n",
+    "        print(f\"Successfully loaded final weights from: {weights_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading weights: {e}\")\n",
+    "        pygame.quit(); return\n",
+    "\n",
+    "    # This assumes your Car class and ray_casting function are defined in a cell above\n",
+    "    car = Car(CAR_IMAGE_PATH, DEFAULT_START_X, DEFAULT_START_Y, angle=DEFAULT_START_ANGLE)\n",
+    "    running = True\n",
+    "    while running:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                running = False\n",
+    "\n",
+    "        # 1. Get state\n",
+    "        distances, ray_endpoints = ray_casting(car, track_surface)\n",
+    "        state = np.array(distances + [car.speed / MAX_SPEED])\n",
+    "        state = np.reshape(state, [1, 4])\n",
+    "        \n",
+    "        # 2. Predict best action\n",
+    "        prediction = ai_model.predict(state, verbose=0)\n",
+    "        action = np.argmax(prediction[0])\n",
+    "        action_map = {0: \"Left\", 1: \"Right\", 2: \"Brake\"}\n",
+    "\n",
+    "        # 3. Execute action\n",
+    "        if action != 2:\n",
+    "            car.speed += ACCELERATION\n",
+    "        if car.speed > 0:\n",
+    "            speed_factor = car.speed / MAX_SPEED\n",
+    "            turn = MAX_TURN_ANGLE - (speed_factor) * (MAX_TURN_ANGLE - MIN_TURN_ANGLE)\n",
+    "            if action == 0: car.angle += turn\n",
+    "            elif action == 1: car.angle -= turn\n",
+    "        if action == 2: car.speed -= BRAKE_FORCE\n",
+    "        car.speed -= FRICTION\n",
+    "        car.speed = max(0, min(car.speed, MAX_SPEED))\n",
+    "        car.move()\n",
+    "        \n",
+    "        # 4. Check for crash (CORRECTED LOGIC)\n",
+    "        crashed = False\n",
+    "        try:\n",
+    "            # Check if the car is on the WALL (BG_COLOR)\n",
+    "            if track_surface.get_at((int(car.x), int(car.y)))[:3] == BG_COLOR:\n",
+    "                crashed = True\n",
+    "        except IndexError:\n",
+    "            crashed = True # Crashed if out of screen bounds\n",
+    "        \n",
+    "        if crashed:\n",
+    "            # Simple reset on crash\n",
+    "            car = Car(CAR_IMAGE_PATH, DEFAULT_START_X, DEFAULT_START_Y, angle=DEFAULT_START_ANGLE)\n",
+    "\n",
+    "        # 5. Render everything\n",
+    "        screen.blit(track_surface, (0, 0))\n",
+    "        car.draw(screen)\n",
+    "        for point in ray_endpoints:\n",
+    "            pygame.draw.line(screen, (0, 255, 0), (car.x, car.y), point, 1)\n",
+    "        \n",
+    "        info_text = f\"Action: {action_map[action]} | Speed: {car.speed:.2f}\"\n",
+    "        text_surface = font.render(info_text, True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (20, 20))\n",
+    "\n",
+    "        pygame.display.update()\n",
+    "        clock.tick(60)\n",
+    "        \n",
+    "    pygame.quit()\n",
+    "\n",
+    "# --- RUN YOUR FINAL AGENT ---\n",
+    "# ------------------------------------------------------------------\n",
+    "# IMPORTANT: Change this to the name of the weights file saved in Phase 2\n",
+    "WEIGHTS_FILENAME = \"final_imitation_weights.h5\"\n",
+    "# ------------------------------------------------------------------\n",
+    "\n",
+    "if not pygame.display.get_init():\n",
+    "    run_final_agent(WEIGHTS_FILENAME)\n",
+    "else:\n",
     "    print(\"Pygame window may already be open. Please restart the kernel to run again.\")"
    ]
   }
